Reduce bodies request size when syncing and remove inefficient dedup
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>